# benji

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  genindex.html  index.html  moon.yml  objects.inv  pyproject.toml  search.html  searchindex.js  west.yaml
.github/workflows/: build-docs.yaml
.moon/: workspace.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_structure.md  important_gotchas.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.west/: config
_sources/: index.md.txt
_sources/adr/: 0007-use-nats-for-the-compute-message-bus.md.txt
_sources/architecture/: index.md.txt  rt_compute_api.md.txt
_static/css/: custom.css
adr/: 0001-record-architecture-decisions.html  0002-split-compute-and-real-time-control-to-separate-processors.html  0003-use-zephyr-for-the-rt-control-core.html  0004-use-embedded-linux-via-yocto-for-the-compute-platform.html  0005-version-and-build-all-apps-as-a-single-entity.html  0006-leverage-microservices-for-the-compute-platform.html  0007-use-nats-for-the-compute-message-bus.html
architecture/: index.html  rt_compute_api.html
benji-rt/: CMakeLists.txt  moon.yml  prj.conf
benji-rt/src/: main.c
doc/: conf.py  index.md  moon.yml
doc/_templates/: breadcrumbs.html  footer.html  layout.html  searchbox.html
doc/adr/: 0001-record-architecture-decisions.md  0003-use-zephyr-for-the-rt-control-core.md  (+4 more)
gnc/: controllers.html  dynamics.html  index.html  state-estimation.html
hardware/: index.html
meta-benji/: .gitignore  benji-devel.yaml  moon.yml  secrets.yaml.tmpl
presentation/: index.html
projects/: index.html
(+49 files in other folders)
