[project]
name = "benji"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anytree>=2.13.0",
    "canopen>=2.4.1",
    "cbor>=1.0.0",
    "clang-format>=15.0.0",
    "colorama>=0.4.6",
    "coverage>=7.11.3",
    "gcovr>=6.0",
    "gitlint>=0.19.1",
    "gitpython>=3.1.41",
    "graphviz>=0.21",
    "imgtool>=2.2.0",
    "intelhex>=2.3.0",
    "junit2html>=31.0.5",
    "junitparser>=4.0.2",
    "kas>=5.0",
    "lpc-checksum>=3.0.0",
    "lxml>=5.3.0",
    "mock>=4.0.1",
    "mypy>=1.18.2",
    "myst-parser>=4.0.1",
    "natsort>=8.4.0",
    "packaging>=24.2",
    "patool>=2.0.0",
    "pillow>=10.3.0",
    "ply>=3.10",
    "progress>=1.6.1",
    "psutil>=5.6.6",
    "pyelftools>=0.29",
    "pygithub>=2.8.1",
    "pykwalify>=1.8.0",
    "pylink-square>=1.7.0",
    "pylint>=3",
    "pyocd>=0.35.0",
    "pyserial>=3.5",
    "pytest>=9.0.1",
    "python-can>=4.3.0",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14 ; sys_platform == 'win32'",
    "pyyaml>=6.0",
    "requests>=2.32.0",
    "reuse>=6.2.0",
    "ruff==0.11.11",
    "semver>=3.0.4",
    "spdx-tools>=0.8.3",
    "sphinx>=8.2.3",
    "sphinx-lint>=1.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-jquery>=4.1",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxcontrib-programoutput>=0.18",
    "spsdk==2.6.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "unidiff>=0.7.5",
    "vermin>=1.7.0",
    "west>=0.14.0",
    "windows-curses>=2.4.1 ; sys_platform == 'win32'",
    "yamllint>=1.37.1",
]
